--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@stagewise-plugins/react": "^0.5.0",
     "@stagewise/toolbar-next": "^0.5.0",
     "@supabase/supabase-js": "^2.50.3",
