Add comprehensive protection for booksphere-mobile reference folder
- Add .cursorignore to exclude mobile folder from AI context
- Add .cursorindexignore to exclude from Cursor indexing
- Add mobile-protection.md rule to prevent accidental edits
- Update .gitignore to prevent mobile files from being committed
- Add REFERENCE_ONLY.md warning in mobile folder

This ensures booksphere-mobile remains reference-only and prevents
accidental edits or commits to the wrong repository.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ next-env.d.ts
 
 # for development
 /ignores
+
+# Exclude booksphere-mobile (reference-only, separate project)
+# This prevents accidental commits to the wrong repository
+booksphere-mobile/
