feat(cataloging): implement production-ready React Query hooks

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,11 +1,13 @@
 # Protect booksphere-mobile from accidental edits
 # This is a reference-only folder - do not edit files in this directory
-booksphere-mobile/
+# NOTE: Commented out to allow reading access for reference and copying
+# booksphere-mobile/
 
 # Additional protection - ignore specific file types in mobile folder
-booksphere-mobile/**/*.ts
-booksphere-mobile/**/*.tsx
-booksphere-mobile/**/*.js
-booksphere-mobile/**/*.jsx
-booksphere-mobile/**/*.json
-booksphere-mobile/**/*.md 
+# NOTE: Commented out to allow reading access for reference and copying
+# booksphere-mobile/**/*.ts
+# booksphere-mobile/**/*.tsx
+# booksphere-mobile/**/*.js
+# booksphere-mobile/**/*.jsx
+# booksphere-mobile/**/*.json
+# booksphere-mobile/**/*.md 
